Fixed link to eoffer page.

--- a/src/app/modules/supplier-portal/views/supplier-portal-home/supplier-portal-home.component.html
+++ b/src/app/modules/supplier-portal/views/supplier-portal-home/supplier-portal-home.component.html
@@ -39,7 +39,7 @@
 
                         <ngx-datatable-column name="Actions" [flexGrow]="1">
                             <ng-template let-value="value" ngx-datatable-cell-template>                        
-                                <button class="btn btn-primary" [routerLink]="['/supplier-portal/offer/pathway-to-success']">Edit</button>
+                                <button class="btn btn-primary" [routerLink]="['/supplier-portal/offer']">Edit</button>
                             </ng-template>
                         </ngx-datatable-column>
                 </ngx-datatable>
@@ -86,7 +86,7 @@
 
                         <ngx-datatable-column name="Actions" [flexGrow]="1">
                             <ng-template let-value="value" ngx-datatable-cell-template>                        
-                                <button class="btn btn-primary" [routerLink]="['/supplier-portal/offer/pathway-to-success']">View</button>
+                                <button class="btn btn-primary" [routerLink]="['/supplier-portal/offer']">View</button>
                             </ng-template>
                         </ngx-datatable-column>
                 </ngx-datatable>
