--- a/src/app/modules/gsa-provide/layouts/e-sell-header/e-sell-header.component.html
+++ b/src/app/modules/gsa-provide/layouts/e-sell-header/e-sell-header.component.html
@@ -4,34 +4,106 @@
 <nav class="navbar navbar-expand-lg navbar-light ">
 
     <!-- BRANDING -->
-    <div class="navbar-brand mr-5 font-weight-light"><img alt="GSA eOffer/eMod" class="img-responsive d-inline-block" src="../../../../../assets/images/gsa-logo.jpg" style="max-height: 60px;"> 
+    <div class="navbar-brand mr-5"><img alt="GSA eOffer/eMod" class="img-responsive d-inline-block" src="../../../../../assets/images/gsa-logo.jpg" style="max-height: 60px;"> 
       &nbsp; 
       <div style="
       display: inline-block;
       vertical-align: bottom;">
-      e-Sell
+      <!-- <span class="gsa-light-blue h2 ml-2"><i>Provide<strong>STAR</strong></i></span> -->
+      <span class="gsa-light-blue h2 ml-2"><i><strong>PRO</strong>vide</i></span>
       </div>
     </div>
-    <!-- eof BRANDING -->  
-    <!-- MOBILE MENU BUTTON -->
+    
   
     <button class="navbar-toggler navbar-toggler-right" type="button" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="isCollapsed" aria-controls="navbarSupportedContent" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
-    <!-- eof MOBILE MENU BUTTON -->
-    <!-- MENU ITEMS -->
+    
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent" [collapse]="!isCollapsed" [isAnimated]="true">
   
       <ul class="navbar-nav">
-        
-        <li class="nav-item active">
-          <button [routerLink]="['/home']" routerLinkActive="active" id="button-home"  type="button" class="btn nav-link" style="white-space: nowrap;" >
-            <span class="fal fa-home mr-1"></span> 
-            <span class="nav-link-label">Home</span>
-          </button>
+        <ng-container *ngIf="!isLoggedIn; else loggedInMenu">
+          <ng-container [ngTemplateOutlet]="defaultMenu"></ng-container>
+        </ng-container>
+      </ul>
+    </div>
+  
+  </nav>
+  
+
+
+<!-- Menu Templates -->
+  <ng-template #defaultMenu>
+    <li class="nav-item active">
+      <button [routerLink]="['/home']" routerLinkActive="active" id="button-home"  type="button" class="btn nav-link" style="white-space: nowrap;" >
+        <span class="fal fa-home mr-1"></span> 
+        <span class="nav-link-label">Home</span>
+      </button>
+    </li>
+    <li class="nav-item active">
+      <button [routerLink]="['/project-center']" routerLinkActive="active" id="button-home"  type="button" class="btn nav-link" style="white-space: nowrap;" >
+        <span class="fal fa-question-circle mr-1"></span> 
+        <span class="nav-link-label">Help</span>
+      </button>
+    </li>
+    <li class="nav-item active">
+      <button [routerLink]="['/login']" routerLinkActive="active" id="button-login"  type="button" class="btn nav-link" style="white-space: nowrap;" >
+        <span class="fal fa-sign-in mr-1"></span> 
+        <span class="nav-link-label">Login</span>
+      </button>
+    </li>
+  </ng-template>
+
+  
+  <ng-template #loggedInMenu>
+    <li class="nav-item active">
+      <button [routerLink]="['/home']" routerLinkActive="active" id="button-home"  type="button" class="btn nav-link" style="white-space: nowrap;" >
+        <span class="fal fa-home mr-1"></span> 
+        <span class="nav-link-label">Home</span>
+      </button>
+    </li>
+    <li class="nav-item active">
+      <button [routerLink]="['/project-center']" routerLinkActive="active" id="button-home"  type="button" class="btn nav-link" style="white-space: nowrap;" >
+        <span class="fal fa-bell mr-1"></span> 
+        <span class="nav-link-label">Alerts</span>
+        <span class="badge badge-pill badge-danger ml-1">5</span>
+      </button>
+    </li>
+    <li class="nav-item active">
+      <button [routerLink]="['/project-center']" routerLinkActive="active" id="button-home"  type="button" class="btn nav-link" style="white-space: nowrap;" >
+        <span class="fal fa-question-circle mr-1"></span> 
+        <span class="nav-link-label">Help</span>
+      </button>
+    </li>
+    <li class="nav-item btn-group" dropdown>
+      <button id="button-basic" dropdownToggle type="button" class="btn nav-link dropdown-toggle" aria-controls="dropdown-basic">
+        <span class="fal fa-user mr-1"></span> <span class="nav-link-label">Account</span> <span class="caret"></span>
+      </button>
+      <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="button-basic">
+        <li role="menuitem">
+          <a class="dropdown-item" [routerLink]="['/where-to-begin']" routerLinkActive="active">            
+            <span class="fal fa-user mr-1"></span> 
+            Profile
+          </a>
         </li>
+        <li role="menuitem">
+          <a class="dropdown-item" [routerLink]="['/where-to-begin']" routerLinkActive="active">            
+            <span class="fal fa-sign-out mr-1"></span> 
+            Logout
+          </a>
+          <!-- <button  (click)="signOut()" id="button-login"  type="button" class="btn nav-link" style="white-space: nowrap;" >
+            <span class="fal fa-sign-out mr-1"></span> 
+            <span class="nav-link-label">Logout</span>
+          </button> -->
+        </li>
+      </ul>
+    </li>
+  </ng-template>
+
+
+  
+        
         
         <!-- <li class="nav-item btn-group" dropdown>
           <button id="button-basic" dropdownToggle type="button" class="btn nav-link dropdown-toggle" aria-controls="dropdown-basic">
@@ -65,18 +137,6 @@
             <li role="menuitem"><a class="dropdown-item" [routerLink]="['/sales-analysis']">Sales Analysis</a></li>
           </ul>
         </li> -->
-        <li class="nav-item active">
-          <button [routerLink]="['/project-center']" routerLinkActive="active" id="button-home"  type="button" class="btn nav-link" style="white-space: nowrap;" >
-            <span class="fal fa-question-circle mr-1"></span> 
-            <span class="nav-link-label">Help</span>
-          </button>
-        </li>
-        <li class="nav-item active">
-          <button [routerLink]="['/home']" routerLinkActive="active" id="button-login"  type="button" class="btn nav-link" style="white-space: nowrap;" >
-            <span class="fal fa-sign-in mr-1"></span> 
-            <span class="nav-link-label">Login</span>
-          </button>
-        </li>
   
         <!--
         <li class="nav-item btn-group" dropdown>
@@ -102,14 +162,4 @@
             <li role="menuitem"><a class="dropdown-item" routerLink="/content-viewer" routerLinkActive="active">Content Viewer</a></li>
             <li role="menuitem"><a class="dropdown-item" routerLink="/search-results" routerLinkActive="active">Search Results</a></li> 
           </ul>
-        </li>
-  
-        -->
-        
-        <!-- eof TEMP NAVIGATION -->    
-      </ul>
-    </div>
-  
-    <!-- eof MENU ITEMS -->
-  </nav>
-  
+        </li> -->
