Made changes to home page

--- a/src/app/modules/gsa-provide/access-point/access-point.component.html
+++ b/src/app/modules/gsa-provide/access-point/access-point.component.html
@@ -8,7 +8,9 @@
                             <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
                                 <img src="assets/images/star-mark-80.png" alt="">
                             </div>
-                            <a href="" class="nav-link p-0 text-center">Advantage!</a>
+                            <a href="" class="nav-link p-0 text-center">
+                                <b class="gsa-red">Advantage!</b>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -18,7 +20,9 @@
                             <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
                                 <img src="assets/images/star-mark-80.png" alt="">
                             </div>
-                            <a href="" class="nav-link p-0 text-center">eBuy</a>
+                            <a href="" class="nav-link p-0 text-center">
+                                <b class="gsa-red">eBuy</b>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -28,7 +32,9 @@
                             <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
                                 <img src="assets/images/star-mark-80.png" alt="">
                             </div>
-                            <a href="" class="nav-link p-0 text-center">Vendor Portal</a>
+                            <a [routerLink]="['/supplier-portal/org-selection']" class="nav-link p-0 text-center">
+                                <b class="gsa-red">Offer Portal</b>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -38,7 +44,9 @@
                             <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
                                 <img src="assets/images/star-mark-80.png" alt="">
                             </div>
-                            <a href="" class="nav-link p-0 text-center">SAM</a>
+                            <a href="" class="nav-link p-0 text-center">
+                                <b class="gsa-red">SAM</b>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -48,7 +56,9 @@
                             <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
                                 <img src="assets/images/star-mark-80.png" alt="">
                             </div>
-                            <a href="" class="nav-link p-0 text-center">PO Portal</a>
+                            <a href="" class="nav-link p-0 text-center">
+                                <b class="gsa-red">PO Portal</b>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -58,7 +68,9 @@
                             <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
                                 <img src="assets/images/star-mark-80.png" alt="">
                             </div>
-                            <a href="" class="nav-link p-0 text-center">FAS SRP</a>
+                            <a href="" class="nav-link p-0 text-center">
+                                <b class="gsa-red">FAS SRP</b>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -68,7 +80,9 @@
                             <div class="pl-3 pr-3 pt-3 pb-1 d-flex justify-content-center">
                                 <img src="assets/images/star-mark-80.png" alt="">
                             </div>
-                            <a href="" class="nav-link p-0 text-center">eLibrary</a>
+                            <a href="" class="nav-link p-0 text-center">
+                                <b class="gsa-red">eLibrary</b>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -93,7 +107,9 @@
                             <div class="pl-4 pr-4 pt-4 pb-1 d-flex justify-content-center">
                                 <img src="assets/images/star-mark-80.png" alt="">
                             </div>
-                            <a href="" class="nav-link p-0 text-center">Vendor Portal</a>
+                            <a href="" class="nav-link p-0 text-center">
+                                <b class="gsa-red">Offer Portal</b>
+                            </a>
                         </div>
                         <div class="flex-fill py-2 px-3">                
                             <div class="row pt-3">
@@ -120,7 +136,7 @@
                                     </div>
                                 </div>
                                 <div class="col-1">
-                                    <button type="button" class="btn btn-default btn-lg text-muted text-primary-hover" style="height: 50px; width: 50px; border-radius: 50px;">
+                                    <button type="button" [routerLink]="['/supplier-portal/offer']" class="btn btn-default btn-lg text-muted text-primary-hover" style="height: 50px; width: 50px; border-radius: 50px;">
                                         <span class="far fa-external-link"></span>
                                     </button>
                                     <button type="button" class="btn btn-default btn-lg text-muted text-primary-hover" style="height: 50px; width: 50px; border-radius: 50px;">
@@ -138,7 +154,9 @@
                             <div class="pl-4 pr-4 pt-4 pb-1 d-flex justify-content-center">
                                 <img src="assets/images/star-mark-80.png" alt="">
                             </div>
-                            <a href="" class="nav-link p-0 text-center">eBuy</a>
+                            <a href="" class="nav-link p-0 text-center">
+                                <b class="gsa-red">eBuy</b>
+                            </a>
                         </div>
                         <div class="flex-fill py-2 px-3">                
                             <div class="row pt-3">
@@ -182,7 +200,9 @@
                             <div class="pl-4 pr-4 pt-4 pb-1 d-flex justify-content-center">
                                 <img src="assets/images/star-mark-80.png" alt="">
                             </div>
-                            <a href="" class="nav-link p-0 text-center">Vendor Portal</a>
+                            <a href="" class="nav-link p-0 text-center">
+                                <b class="gsa-red">Offer Portal</b>
+                            </a>
                         </div>
                         <div class="flex-fill py-2 px-3">                
                             <div class="row pt-3">
@@ -209,7 +229,7 @@
                                     </div>
                                 </div>
                                 <div class="col-1">
-                                    <button type="button" class="btn btn-default btn-lg text-muted text-primary-hover" style="height: 50px; width: 50px; border-radius: 50px;">
+                                    <button type="button" [routerLink]="['/supplier-portal/offer']" class="btn btn-default btn-lg text-muted text-primary-hover" style="height: 50px; width: 50px; border-radius: 50px;">
                                         <span class="far fa-external-link"></span>
                                     </button>
                                     <button type="button" class="btn btn-default btn-lg text-muted text-primary-hover" style="height: 50px; width: 50px; border-radius: 50px;">
@@ -233,7 +253,9 @@
                             <div class="pl-4 pr-4 pt-4 pb-1 d-flex justify-content-center">
                                 <img src="assets/images/star-mark-80.png" alt="">
                             </div>
-                            <a href="" class="nav-link p-0 text-center">Vendor Portal</a>
+                            <a href="" class="nav-link p-0 text-center">
+                                <b class="gsa-red">Offer Portal</b>
+                            </a>
                         </div>
                         <div class="flex-fill py-2 px-3">                
                             <div class="row pt-3">
@@ -260,7 +282,7 @@
                                     </div>
                                 </div>
                                 <div class="col-1">
-                                    <button type="button" class="btn btn-default btn-lg text-muted text-primary-hover" style="height: 50px; width: 50px; border-radius: 50px;">
+                                    <button type="button" [routerLink]="['/supplier-portal/offer']" class="btn btn-default btn-lg text-muted text-primary-hover" style="height: 50px; width: 50px; border-radius: 50px;">
                                         <span class="far fa-external-link"></span>
                                     </button>
                                     <button type="button" class="btn btn-default btn-lg text-muted text-primary-hover" style="height: 50px; width: 50px; border-radius: 50px;">
@@ -278,7 +300,9 @@
                             <div class="pl-4 pr-4 pt-4 pb-1 d-flex justify-content-center">
                                 <img src="assets/images/star-mark-80.png" alt="">
                             </div>
-                            <a href="" class="nav-link p-0 text-center">eBuy</a>
+                            <a href="" class="nav-link p-0 text-center">
+                                <b class="gsa-red">eBuy</b>
+                            </a>
                         </div>
                         <div class="flex-fill py-2 px-3">                
                             <div class="row pt-3">
@@ -322,7 +346,9 @@
                             <div class="pl-4 pr-4 pt-4 pb-1 d-flex justify-content-center">
                                 <img src="assets/images/star-mark-80.png" alt="">
                             </div>
-                            <a href="" class="nav-link p-0 text-center">Vendor Portal</a>
+                            <a href="" class="nav-link p-0 text-center">
+                                <b class="gsa-red">Offer Portal</b>
+                            </a>
                         </div>
                         <div class="flex-fill py-2 px-3">                
                             <div class="row pt-3">
@@ -349,7 +375,7 @@
                                     </div>
                                 </div>
                                 <div class="col-1">
-                                    <button type="button" class="btn btn-default btn-lg text-muted text-primary-hover" style="height: 50px; width: 50px; border-radius: 50px;">
+                                    <button type="button" [routerLink]="['/supplier-portal/offer']" class="btn btn-default btn-lg text-muted text-primary-hover" style="height: 50px; width: 50px; border-radius: 50px;">
                                         <span class="far fa-external-link"></span>
                                     </button>
                                     <button type="button" class="btn btn-default btn-lg text-muted text-primary-hover" style="height: 50px; width: 50px; border-radius: 50px;">
