--- a/src/app/modules/gsa-provide/layouts/e-sell-header/e-sell-header.component.html
+++ b/src/app/modules/gsa-provide/layouts/e-sell-header/e-sell-header.component.html
@@ -10,7 +10,7 @@
       display: inline-block;
       vertical-align: bottom;">
       <!-- <span class="gsa-light-blue h2 ml-2"><i>Provide<strong>STAR</strong></i></span> -->
-      <span class="gsa-light-blue h2 ml-2"><i><strong>PRO</strong>vide</i></span>
+      <span class="gsa-red h2 ml-1"><i><strong>PRO</strong>vide</i></span>
       </div>
     </div>
     
@@ -100,66 +100,3 @@
       </ul>
     </li>
   </ng-template>
-
-
-  
-        
-        
-        <!-- <li class="nav-item btn-group" dropdown>
-          <button id="button-basic" dropdownToggle type="button" class="btn nav-link dropdown-toggle" aria-controls="dropdown-basic">
-            <span class="fal fa-file-signature mr-1"></span> <span class="nav-link-label">Contract Offers</span> <span class="caret"></span>
-          </button>
-          <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
-            <li role="menuitem"><a class="dropdown-item" [routerLink]="['/understanding-contracts']" routerLinkActive="active">Understanding GSA Contracts</a></li>
-            <li role="menuitem"><a class="dropdown-item" [routerLink]="['/where-to-begin']" routerLinkActive="active">Where To Begin</a></li>
-          </ul>
-        </li>
-        <li class="nav-item btn-group" dropdown>
-          <button id="button-manage" dropdownToggle type="button" class="btn nav-link dropdown-toggle" aria-controls="dropdown-manage"> 
-            <span class="fal fa-file-contract mr-1"></span> <span class="nav-link-label">Contract Modifications</span>
-            <span class="caret"></span>
-          </button>
-          <ul id="dropdown-manage" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
-            <li role="menuitem"><a class="dropdown-item" [routerLink]="['/advantage']">GSA Advantage</a></li>
-            <li role="menuitem"><a class="dropdown-item" [routerLink]="['/contract-compliance']">Contract Compliance</a></li>
-            <li role="menuitem"><a class="dropdown-item" [routerLink]="['/market-research']">Market Research</a></li> 
-            <li role="menuitem"><a class="dropdown-item" [routerLink]="['/lookup-tables']" routerLinkActive="active">Lookup Tables</a></li> 
-          </ul>  
-        </li>
-        <li class="nav-item btn-group" dropdown>
-  
-          <button id="button-sales" dropdownToggle type="button" class="btn nav-link dropdown-toggle" aria-controls="dropdown-sales">
-            <span class="fal fa-file-invoice-dollar mr-1"></span> 
-            <span class="nav-link-label">Contract Sales</span> <span class="caret"></span>
-          </button>
-          <ul id="dropdown-sales" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
-            <li role="menuitem"><a class="dropdown-item" [routerLink]="['/report-sales']">Reporting My Sales</a></li>
-            <li role="menuitem"><a class="dropdown-item" [routerLink]="['/sales-analysis']">Sales Analysis</a></li>
-          </ul>
-        </li> -->
-  
-        <!--
-        <li class="nav-item btn-group" dropdown>
-  
-          <button id="button-sales" dropdownToggle  type="button" class="btn nav-link dropdown-toggle" aria-controls="dropdown-login">
-            <span class="fal fa-file-invoice mr-1"></span> 
-            <span class="nav-link-label">Login</span> <span class="caret"></span>
-          </button>
-          <ul id="dropdown-login" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
-            <li role="menuitem"><a class="dropdown-item" href="report-sales">Login in as a Contractor</a></li>
-            <li role="menuitem"><a class="dropdown-item" href="sales-analysis">Login in as a Contrcting Officer</a></li>
-          </ul>
-        </li>
-       -->
-        <!-- TEMP NAVIGATION - to be deleted once navigation is wired -->
-        <!--
-        <li class="nav-item btn-group" dropdown>
-          <button id="button-basic" dropdownToggle type="button" class="btn nav-link dropdown-toggle temp" aria-controls="dropdown-basic">
-            <span class="fal fa-code mr-1"></span> <span class="nav-link-label">Temp Dev Links</span> <span class="caret"></span>
-          </button>
-          <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
-            <li role="menuitem"><a class="dropdown-item" routerLink="/ui-kit" routerLinkActive="active">UI Kit</a></li>
-            <li role="menuitem"><a class="dropdown-item" routerLink="/content-viewer" routerLinkActive="active">Content Viewer</a></li>
-            <li role="menuitem"><a class="dropdown-item" routerLink="/search-results" routerLinkActive="active">Search Results</a></li> 
-          </ul>
-        </li> -->
