--- a/src/app/modules/supplier-portal/components/organization-details-banner/organization-details-banner.component.html
+++ b/src/app/modules/supplier-portal/components/organization-details-banner/organization-details-banner.component.html
@@ -3,7 +3,7 @@
         <div class="row justify-content-center">
             <div class="col-md">
                 <small>Company Name:&nbsp;&nbsp;</small>
-                <br class="d-sm-none d-md-block" /> ABC Co.
+                <br class="d-sm-none d-md-block" />Global Supplier Inc.
             </div>
             <div class="col-md">
                 <small>Solicitaion Number:&nbsp;&nbsp;</small>
