--- a/src/assets/theme/palette.css
+++ b/src/assets/theme/palette.css
@@ -23,6 +23,12 @@
 .gsa-dark-grey {
   color: #636262 !important;
 }
+.gsa-red {
+  color: #af3639 !important;
+}
+
+
+
 .bg-gsa-dark-blue {
   background-color: #112d51 !important;
 }
